# south-admin-fastApi

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml
api/routes/system/: log.py  menu.py  permission.py  role.py  user.py
config/: database.py  settings.py
core/: database.py  router.py
crud/: log.py  menu.py  permission.py  role.py  user.py
crud/system/: menu.py  permission.py  user.py
database/: init.sql
middleware/: auth.py  log.py
models/: base.py
models/system/: log.py  menu.py  permission.py  role.py  user.py
schemas/: base.py  log.py  menu.py  permission.py  response.py  role.py  user.py
utils/: security.py
