[project]
name = "south-admin-fastapi"
version = "0.1.0"
description = "South Admin FastAPI 后台管理系统"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.25",
    "aiomysql>=0.2.0",
    "pydantic>=2.5.3",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
